another sign through TokenLib